--- a/CardFileBooks/Web.Client/Views/Account/ConfirmEmail.cshtml
+++ b/CardFileBooks/Web.Client/Views/Account/ConfirmEmail.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Подтверждение почты";
+    ViewBag.Title = "Confirm Email";
 }
 
 <h2>@ViewBag.Title.</h2>
 <div>
     <p>
-        Благодарим за подтверждение электронной почты. @Html.ActionLink("Щелкните здесь для входа", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
