--- a/CardFileBooks/Web.Client/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/CardFileBooks/Web.Client/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Подтверждение пароля (если он был забыт)";
+    ViewBag.Title = "Forgot Password Confirmation";
 }
 
 <hgroup class="title">
@@ -7,7 +7,7 @@
 </hgroup>
 <div>
     <p>
-        Проверьте электронную почту, чтобы сбросить пароль.
+        Please check your email to reset your password.
     </p>
 </div>
 	
