--- a/CardFileBooks/Web.Client/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/CardFileBooks/Web.Client/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Подтверждение сброса пароля";
+    ViewBag.Title = "Reset password confirmation";
 }
 
 <hgroup class="title">
@@ -7,6 +7,6 @@
 </hgroup>
 <div>
     <p>
-        Ваш пароль сброшен. @Html.ActionLink("Щелкните здесь для входа", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
